# redfish-client-python

./: .gitignore  Makefile  Pipfile  README.rst  pylintrc  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
redfish_client/: __init__.py  caching_connector.py  connector.py  exceptions.py  resource.py  root.py
tests/: test_caching_connector.py  test_connector.py  test_resource.py
