[metadata]
name = redfish-client
author = XLAB d.o.o.
author-email = pypi@xlab.si
summary = Redfish API client for Python
description-file = README.rst
home-page = https://github.com/xlab-si/redfish-client-python
license = Apache-2
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[files]
packages =
    redfish_client

[wheel]
universal = 1

[pbr]
warnerrors = true
