[metadata]
name = redfish-client
url = https://github.com/xlab-steampunk/redfish-client-python
project_urls =
    Source Code = https://github.com/xlab-steampunk/redfish-client-python
    Bug Tracker = https://github.com/xlab-steampunk/redfish-client-python/issues
author = XLAB d.o.o.
author_email = pypi@xlab.si
description = Redfish API client for Python
long_description = file: README.rst
license_file = LICENSE
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[files]
packages =
    redfish_client

[wheel]
universal = 1

[pbr]
warnerrors = true
